force-app/main/default/objects/Certified_Species__c/Certified_Species__c.object-meta.xml
<CustomObject>
    <description>FSC</description>
    <label>Certified Species</label>
    <nameField>
        <label>Certified Species Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certified Species</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>