force-app/main/default/objects/Certified_Species__c/fields/Certified_Product__c.field-meta.xml
<CustomField>
    <fullName>Certified_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certified Product</label>
    <referenceTo>CertifiedProducts__c</referenceTo>
    <relationshipLabel>Certified Species</relationshipLabel>
    <relationshipName>Certified_Species</relationshipName>
    <type>Lookup</type>
</CustomField>