force-app/main/default/objects/Certified_Species__c/fields/Product_Group_FSCCH__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_FSCCH__c</fullName>
    <label>Product Group FSCCH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>