force-app/main/default/objects/Certified_Species__c/fields/Product_Species_FSCPK__c.field-meta.xml
<CustomField>
    <fullName>Product_Species_FSCPK__c</fullName>
    <label>Product Species FSCPK</label>
    <length>100</length>
    <type>Text</type>
</CustomField>