force-app/main/default/objects/Certified_Species__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Species</label>
    <referenceTo>Species__c</referenceTo>
    <relationshipLabel>Certified Species</relationshipLabel>
    <relationshipName>Certified_Species</relationshipName>
    <type>Lookup</type>
</CustomField>